5つ目のレッスンを実装。

--- a/SecureCoder/Courses/XSS/falsify_html/falsify_form/safe/guides/apply.php.guide.json
+++ b/SecureCoder/Courses/XSS/falsify_html/falsify_form/safe/guides/apply.php.guide.json
@@ -1,5 +1,123 @@
 {
     "index": 0,
     "fileName": "apply.php",
-    "explainers": []
+    "explainers": [
+        {
+            "questionIndices": [],
+            "focusLabels": [],
+            "focusComponents": [
+                []
+            ],
+            "messages": [
+                {
+                    "text": "これは粗大ゴミ回収の申し込みを行うWebページです。\n体験編ではこのサイトにあえて脆弱性を作り込むことでどのようなコードを書くと攻撃者に狙われてしまうのかを学習して、攻撃の流れを確認しました。",
+                    "languages": []
+                },
+                {
+                    "text": "対策編ではその攻撃への対策として特殊文字のエスケープについて学習していきます。",
+                    "languages": []
+                }
+            ]
+        },
+        {
+            "questionIndices": [],
+            "focusLabels": [],
+            "focusComponents": [
+                [
+                    4,
+                    5,
+                    6
+                ]
+            ],
+            "messages": [
+                {
+                    "text": "体験編のレッスンではこの赤枠で囲まれた部分に脆弱性を作りこみました。\nその時に書いたコードを以下に示します。\n<?php echo $_POST[\"name\"]; ?>",
+                    "languages": [
+                        "php"
+                    ]
+                },
+                {
+                    "text": "特殊文字のエスケープを行わずにPOSTリクエストで受け取った値を表示していました。\nその結果、攻撃者が自由にコードを埋め込むことが可能になり全く別の<form>要素を挿入されてしまいました。",
+                    "languages": [
+                        "html"
+                    ]
+                },
+                {
+                    "text": "この攻撃への対策として、今回は特殊文字のエスケープを学習します。\n特殊文字のエスケープを行うことによって、HTMLにおいて特別な意味を持つ文字を通常の文字として扱うことができるようになります。",
+                    "languages": []
+                },
+                {
+                    "text": "例えば、HTMLで以下のコードを書くと\n<p>Hello World</p>\n以下のように表示されます。\nHello World",
+                    "languages": [
+                        "html"
+                    ]
+                },
+                {
+                    "text": "この「<p>Hello World</p>」に対して特殊文字のエスケープを行うには以下のように書きます。\n&lt;p&gt;Hello World&lt;/p&gt;",
+                    "languages": [
+                        "html"
+                    ]
+                },
+                {
+                    "text": "その結果、Webブラウザ上では以下のように表示されます。\n<p>Hello World</p>",
+                    "languages": []
+                },
+                {
+                    "text": "「<」と「>」はHTMLにおいてタグを記述するのに使われるため特別な意味を持っていますが、「<」を&lt;、「>」を&gt;に置き換えることによってHTMLタグの記述をするための文字として解釈されるのではなく、通常の文字として解釈され表示されます。",
+                    "languages": [
+                        "html"
+                    ]
+                },
+                {
+                    "text": "なお、エスケープできる特殊文字は他にもありますので各自で調べてみてください。",
+                    "languages": [
+                    ]
+                },
+                {
+                    "text": "この特殊文字のエスケープを行うことによって、表示する文字列の中にHTMLのタグが含まれていたとしてもタグとして解釈させるのではなく、単純な文字列として解釈させることが可能になります。",
+                    "languages": [
+                    ]
+                },
+                {
+                    "text": "これを自動で行ってくれるPHPの関数がhtmlspecialcharsです。\nhtmlspecialcharsは第1引数にエスケープしたい文字列を渡し、第2引数にオプションを渡します。\n通常は第2引数にENT_QUOTESを渡します。",
+                    "languages": []
+                },
+                {
+                    "text": "htmlspecialcharsの第2引数を省略することもできますがその場合は、「'」のエスケープが行われません。\n「'」をエスケープしていない場合、XSS脆弱性となり攻撃を仕掛けることが可能になってしまいます。",
+                    "languages": []
+                },
+                {
+                    "text": "詳しくは「引用符を狙った攻撃」というレッスンで解説していますのでそちらを参考にしてください。",
+                    "languages": []
+                },
+                {
+                    "text": "それでは実際に特殊文字をエスケープしてから表示するコードを書いてみましょう。",
+                    "languages": []
+                }
+            ]
+        },
+        {
+            "questionIndices": [
+                0
+            ],
+            "focusLabels": [],
+            "focusComponents": [
+                []
+            ],
+            "messages": [
+                {
+                    "text": "特殊文字をエスケープしてから表示しているため、攻撃者がコードを埋め込むことは不可能になっています。",
+                    "languages": []
+                },
+                {
+                    "text": "以上で今回の説明は終了です。\n他のファイルについては体験編のレッスンと同じものを使用していますので、詳しい説明はそちらを参考にしてください。",
+                    "languages": []
+                },
+                {
+                    "text": "それでは実際にプレビューを確認し、攻撃が不可能であることを見ていきましょう。",
+                    "languages": []
+                }
+            ]
+        }
+    ]
 }
