--- a/SecureCoder/Courses/XSS/falsify_html/falsify_form/unsafe/guides/apply.php.guide.json
+++ b/SecureCoder/Courses/XSS/falsify_html/falsify_form/unsafe/guides/apply.php.guide.json
@@ -10,7 +10,7 @@
             ],
             "messages": [
                 {
-                    "text": "これは粗大ゴミ回収の申し込みを行うWebページです。\n今回はこのサイトにあえて脆弱性を作り込むことでどのようなコードを書くと攻撃者に狙われてしまうのかを学習します。",
+                    "text": "これは粗大ゴミ回収の申し込みを行うWebページです。\n体験編ではこのサイトにあえて脆弱性を作り込むことでどのようなコードを書くと攻撃者に狙われてしまうのかを学習します。",
                     "languages": []
                 }
             ]
