6つ目のレッスンを実装。

--- a/SecureCoder/Courses/XSS/falsify_html/falsify_form/safe/guides/apply.php.guide.json
+++ b/SecureCoder/Courses/XSS/falsify_html/falsify_form/safe/guides/apply.php.guide.json
@@ -87,7 +87,7 @@
                     "languages": []
                 },
                 {
-                    "text": "詳しくは「引用符を狙った攻撃」というレッスンで解説していますのでそちらを参考にしてください。",
+                    "text": "詳しくは「引用符を狙った攻撃」というセクションの「属性値を引用符で囲まないことによる脆弱性」というレッスンで解説していますのでそちらを参考にしてください。",
                     "languages": []
                 },
                 {
